--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "aws-sdk": "^2.747.0",
+    "dotenv": "^8.2.0",
     "serverless": "^1.82.0",
     "serverless-export-env": "^1.3.1"
   }
