--- a/serverless.yml
+++ b/serverless.yml
@@ -46,6 +46,7 @@ functions:
 
 resources:
   Resources:
+
     RestaurantsTable:
       Type: AWS::DynamoDB::Table
       Properties:
@@ -56,6 +57,42 @@ resources:
         KeySchema:
           - AttributeName: name
             KeyType: HASH
+
+    CognitoUserPool:
+      Type: AWS::Cognito::UserPool
+      Properties:
+        AliasAttributes:
+          - email
+        UsernameConfiguration:
+          CaseSensitive: false
+        AutoVerifiedAttributes:
+          - email
+        Policies:
+          PasswordPolicy:
+            MinimumLength: 8
+            RequireLowercase: true
+            RequireNumbers: true
+            RequireUppercase: true
+            RequireSymbols: true
+        Schema:
+          - AttributeDataType: String
+            Mutable: true
+            Name: given_name
+            Required: true
+            StringAttributeConstraints:
+              MinLength: '1'
+          - AttributeDataType: String
+            Mutable: true
+            Name: family_name
+            Required: true
+            StringAttributeConstraints:
+              MinLength: '1'
+          - AttributeDataType: String
+            Mutable: true
+            Name: email
+            Required: true
+            StringAttributeConstraints:
+              MinLength: '1'
   Outputs:
     RestaurantsTableName:
       Value: !Ref RestaurantsTable
