add search restaurants handler

--- a/serverless.yml
+++ b/serverless.yml
@@ -42,6 +42,14 @@ functions:
             type: aws_iam
     environment:
       restaurants_table: !Ref RestaurantsTable
+  search-restaurants:
+    handler: functions/search-restaurants.handler
+    events:
+      - http:
+          path: /restaurants/search
+          method: post
+    environment:
+      restaurants_table: !Ref RestaurantsTable
 
 resources:
   Resources:
