--- a/package.json
+++ b/package.json
@@ -5,14 +5,20 @@
   "main": "index.js",
   "scripts": {
     "sls": "$(npm bin)/serverless",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dotEnv": "sls export-env",
+    "test": "npm run dotEnv && jest tests"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^26.0.15",
     "aws-sdk": "^2.747.0",
+    "awscred": "^1.5.0",
+    "cheerio": "^1.0.0-rc.3",
+    "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
+    "jest": "^26.6.1",
     "serverless": "^1.82.0",
     "serverless-export-env": "^1.3.1",
     "serverless-pseudo-parameters": "^2.5.0"
@@ -20,6 +26,7 @@
   "dependencies": {
     "aws4": "^1.10.1",
     "axios": "^0.20.0",
+    "lodash": "^4.17.20",
     "mustache": "^4.0.1"
   }
 }
