--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "sls": "$(npm bin)/serverless",
     "dotEnv": "sls export-env",
-    "test": "npm run dotEnv && jest tests"
+    "test": "npm run dotEnv && cross-env TEST_MODE=handler jest",
+    "acceptance": "npm run dotEnv && cross-env TEST_MODE=http jest"
   },
   "keywords": [],
   "author": "",
