--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "sls": "$(npm bin)/serverless",
     "dotEnv": "sls export-env",
-    "test": "npm run dotEnv && cross-env TEST_MODE=handler jest",
-    "acceptance": "npm run dotEnv && cross-env TEST_MODE=http jest"
+    "integration": "npm run dotEnv && cross-env TEST_MODE=integration jest",
+    "e2e": "npm run dotEnv && cross-env TEST_MODE=e2e jest"
   },
   "keywords": [],
   "author": "",
