--- a/serverless.yml
+++ b/serverless.yml
@@ -11,6 +11,9 @@ plugins:
 provider:
   name: aws
   runtime: nodejs12.x
+  environment:
+    serviceName: ${self:service}
+    stage: ${self:provider.stage}
   iamRoleStatements:
     - Effect: Allow
       Action: dynamodb:scan
